test/corpus/comments.txt
================================================================================
Comment kinds follow the Rust rule (D-428)
================================================================================

// a
///
/// a
////
//// a
//!
//! a
//!! a
///a
//a
/////

--------------------------------------------------------------------------------

(source_file
  (comment)
  (doc_comment)
  (doc_comment)
  (comment)
  (comment)
  (module_doc)
  (module_doc)
  (module_doc)
  (doc_comment)
  (comment)
  (comment))

================================================================================
Empty comment at end of file
================================================================================

fn f() -> Int {
  1 //
}
//
--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (type_identifier))
    (block
      (integer)
      (comment)))
  (comment))
