test/corpus/declarations.txt
================================================================================
Module docs, attributes and imports
================================================================================

//! Module docs.
@!target(native)
import std::ops::{Add, Compare as Cmp, max}
import std::io as out

--------------------------------------------------------------------------------

(source_file
  (module_doc)
  (inner_attribute
    (identifier)
    (attribute_arguments
      (identifier)))
  (import_declaration
    (module)
    (module)
    (import_list
      (import_item
        (type_identifier))
      (import_item
        (type_identifier)
        (type_identifier))
      (import_item
        (identifier))))
  (import_declaration
    (module)
    (module)
    (module)))

================================================================================
Types
================================================================================

/// A value.
pub exposed type Value {
  Null,
  Number(Float),
  Point { x: Int, y: Int },
}

type Counter { requests: channel::Sender<Request> }

@external(native)
type Db

type Pair<A, B> = (A, B)

--------------------------------------------------------------------------------

(source_file
  (doc_comment)
  (type_declaration
    (visibility_modifier)
    (type_identifier)
    (variant_list
      (variant
        (constructor))
      (variant
        (constructor)
        (positional_field_list
          (named_type
            (type_identifier))))
      (variant
        (constructor)
        (field_list
          (field_declaration
            (identifier)
            (named_type
              (type_identifier)))
          (field_declaration
            (identifier)
            (named_type
              (type_identifier)))))))
  (type_declaration
    (type_identifier)
    (field_list
      (field_declaration
        (identifier)
        (named_type
          (module)
          (type_identifier)
          (type_arguments
            (named_type
              (type_identifier)))))))
  (attribute
    (identifier)
    (attribute_arguments
      (identifier)))
  (type_declaration
    (type_identifier))
  (type_alias
    (type_identifier)
    (type_parameters
      (type_parameter
        (type_identifier))
      (type_parameter
        (type_identifier)))
    (tuple_type
      (named_type
        (type_identifier))
      (named_type
        (type_identifier)))))

================================================================================
Interfaces
================================================================================

pub interface Show {
  /// Renders.
  fn show(Self) -> String
}

pub interface Num: Add + ops::Mul

--------------------------------------------------------------------------------

(source_file
  (interface_declaration
    (visibility_modifier)
    (type_identifier)
    (interface_body
      (doc_comment)
      (interface_function
        (identifier)
        (parameter_types
          (named_type
            (type_identifier)))
        (named_type
          (type_identifier)))))
  (interface_declaration
    (visibility_modifier)
    (type_identifier)
    (bounds
      (named_type
        (type_identifier))
      (named_type
        (module)
        (type_identifier)))))

================================================================================
Functions
================================================================================

@external(native, "cheby_sqlite_open")
@blocking
pub fn open(path: String) -> Result<Db, String>

priv fn describe<T: Show + Any>(items: List<T>, f: fn(T) -> dyn Show) -> (Int, T) {
  todo
}

--------------------------------------------------------------------------------

(source_file
  (attribute
    (identifier)
    (attribute_arguments
      (identifier)
      (string
        (string_content))))
  (attribute
    (identifier))
  (function_declaration
    (visibility_modifier)
    (identifier)
    (parameters
      (parameter
        (identifier)
        (named_type
          (type_identifier))))
    (named_type
      (type_identifier)
      (type_arguments
        (named_type
          (type_identifier))
        (named_type
          (type_identifier)))))
  (function_declaration
    (visibility_modifier)
    (identifier)
    (type_parameters
      (type_parameter
        (type_identifier)
        (bounds
          (named_type
            (type_identifier))
          (named_type
            (type_identifier)))))
    (parameters
      (parameter
        (identifier)
        (named_type
          (type_identifier)
          (type_arguments
            (named_type
              (type_identifier)))))
      (parameter
        (identifier)
        (function_type
          (parameter_types
            (named_type
              (type_identifier)))
          (dyn_type
            (named_type
              (type_identifier))))))
    (tuple_type
      (named_type
        (type_identifier))
      (named_type
        (type_identifier)))
    (block
      (todo_expression))))

================================================================================
Tests
================================================================================

test "it works" {
  assert 1 + 1 == 2 as "math"
}

--------------------------------------------------------------------------------

(source_file
  (test_declaration
    (string
      (string_content))
    (block
      (assert_statement
        (binary_expression
          (binary_expression
            (integer)
            (integer))
          (integer))
        (string
          (string_content))))))
