test/corpus/lexical.txt
================================================================================
Turbofish with whitespace
================================================================================

fn f() {
  map::new:: < String >()
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (call_expression
        (path_expression
          (module)
          (identifier)
          (turbofish
            (named_type
              (type_identifier))))
        (arguments)))))

================================================================================
Longest match keeps `<<` and `<=`
================================================================================

fn f() {
  let a = b<<-1
  let c = b<=-1
  let d = b < -1
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (identifier)
          (unary_expression
            (integer))))
      (let_statement
        (identifier)
        (binary_expression
          (identifier)
          (unary_expression
            (integer))))
      (let_statement
        (identifier)
        (binary_expression
          (identifier)
          (unary_expression
            (integer)))))))

================================================================================
Names that look like keywords
================================================================================

@async
fn f() {
  let if = 1
  let _x = async
  let _ = self
  g(_)
}

--------------------------------------------------------------------------------

(source_file
  (attribute
    (identifier))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (integer))
      (let_statement
        (identifier)
        (identifier))
      (let_statement
        (wildcard)
        (identifier))
      (call_expression
        (identifier)
        (arguments
          (wildcard))))))

================================================================================
Type arguments split `>>` and `>=`
================================================================================

const e: List<List<Int>>= []

--------------------------------------------------------------------------------

(source_file
  (const_declaration
    (identifier)
    (named_type
      (type_identifier)
      (type_arguments
        (named_type
          (type_identifier)
          (type_arguments
            (named_type
              (type_identifier))))))
    (list_expression)))

================================================================================
`<-` is one token
:error
================================================================================

fn f() {
  let b = a<-1
}

--------------------------------------------------------------------------------

================================================================================
Wildcard is not a value
:error
================================================================================

fn f() {
  let x = _
}

--------------------------------------------------------------------------------

================================================================================
Keyword as a function name
:error
================================================================================

fn test() {
  1
}

--------------------------------------------------------------------------------

================================================================================
Keyword as a field
:error
================================================================================

fn f() {
  x.type
}

--------------------------------------------------------------------------------

================================================================================
Keyword as a record field
:error
================================================================================

fn f() {
  P { type: 1 }
}

--------------------------------------------------------------------------------

================================================================================
Keyword as an attribute name
:error
================================================================================

@test
fn f() {
  1
}

--------------------------------------------------------------------------------

================================================================================
Keyword as a pattern
:error
================================================================================

fn f() {
  let case = 1
}

--------------------------------------------------------------------------------

================================================================================
Keyword as a module
:error
================================================================================

import std::type

--------------------------------------------------------------------------------

================================================================================
Form feed is not whitespace
:error
================================================================================

const x: Int =1

--------------------------------------------------------------------------------

================================================================================
Vertical tab is not whitespace
:error
================================================================================

const x: Int =1

--------------------------------------------------------------------------------
